Bug 100768 - formula compiler doesn't accept first argument to be omitted.
Summary: formula compiler doesn't accept first argument to be omitted.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-05 05:44 UTC by raal
Modified: 2016-10-25 18:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2016-07-05 05:44:12 UTC
compiler doesn't accept first argument to be omitted.
for example
=ISPMT(;1;L4;L5) 
=BITXOR(,25)


You already get a formula correction message box when entering such.
Comment 1 Commit Notification 2016-07-12 23:12:09 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=633413a37ee7442cd899db1269fd3ef404efe58a

Resolves: tdf#100768 accept empty missing argument also for first parameter

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.