Resolves: tdf#100768 accept empty missing argument also for first parameter

... and let the interpreter decide about validity. Only if at least two
parameters are given, empty/omitted or not.

Change-Id: I2d7070e56f616b1940ff577c43e257eabb81b412